# elevation-service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  License  README.md  docker-compose.dev.yaml  docker-compose.yaml  docker-compose.yml  elevation.py  hgt.js  index.js  lru.py  package.json  server.py  tile.py  tileset.js
.circleci/: config.yml
.github/workflows/: buildImage.yml
src/: config.rs  file_tileset.rs  handlers.rs  hgt.rs  main.rs  s3_tileset.rs  telemetry.rs  tileset.rs  types.rs
src/tileset/: file_tileset.rs  hgt.rs  http_tileset.rs  mod.rs  s3_tileset.rs  tileset.rs
test/: test.js
tools/nginx/: rate-limit.conf
vhost.d/: elevation.racemap.com
