[package]
name = "elevation-service"
version = "0.1.0"
edition = "2024"

[dependencies]
byte-unit = "5.1.6"
dotenvy = "0.15.7"
env_logger = "0.11.8"
flate2 = "1.1.2"
log = "0.4.27"
once_cell = "1.21.3"
rand = "0.9.1"
reqwest = { version = "0.12.20", features = ["json", "gzip"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3.7"
