[package]
name = "elevation-service"
version = "2.0.5"
edition = "2024"

[dependencies]
byte-unit = "5.1.6"
dotenvy = "0.15.7"
env_logger = "0.11.8"
flate2 = "1.1.2"
futures = "0.3.31"
log = "0.4.27"
moka = { version = "0.12.10", features = ["future"] }
once_cell = "1.21.3"
rand = "0.9.1"
reqwest = { version = "0.12.20", features = ["json", "gzip"] }
rust-s3 = { version = "0.35.1", default-features = false, features = [
    "tokio-rustls-tls",
] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3.7"
