[package]
name = "elevation-service"
version = "2.0.5"
edition = "2024"

[dependencies]
byte-unit = "5.1.6"
dotenvy = "0.15.7"
flate2 = "1.1.2"
futures = "0.3.31"
moka = { version = "0.12.10", features = ["future"] }
once_cell = "1.21.3"
opentelemetry = "0.21"
opentelemetry-otlp = { version = "0.14", features = [
    "http-proto",
    "reqwest-client",
] }
opentelemetry-semantic-conventions = "0.13"
opentelemetry-stdout = { version = "0.2", features = ["trace"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
rand = "0.9.1"
reqwest = { version = "0.12.20", features = ["json", "gzip"] }
rust-s3 = { version = "0.35.1", default-features = false, features = [
    "tokio-rustls-tls",
] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry = "0.22"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
warp = "0.3.7"
